--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,4 +27,4 @@ linting:
   stage: lint
   allow_failure: true
   script:
-    - pylint --rcfile=.pylintrc --recursive=y src tests
+    - poetry run pylint --rcfile=.pylintrc --recursive=y src tests
