feat: update pylintrc and add pylint_pytest extention

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "^23.11.0"
 ipython = "^8.17.2"
 pytest = "^7.4.3"
 pytest-md-report = "^0.5.0"
+pylint-pytest = "^1.1.7"
 
 [build-system]
 requires = ["poetry-core"]
