--- a/.pylintrc
+++ b/.pylintrc
@@ -431,9 +431,9 @@ disable=raw-checker-failed,
         use-symbolic-message-instead,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero,
-        missing-class-docstring,
-        missing-module-docstring,
-        too-few-public-methods,
+        ; missing-class-docstring,
+        ; missing-module-docstring,
+        ; too-few-public-methods,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
