--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ linting:
   stage: test
   allow_failure: true
   script:
-    - poetry run pylint --rcfile=.pylintrc src tests
+    - poetry run pylint --rcfile=.pylintrc src tests sempl.py
 
 test:
   stage: test
