--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ target-version = "py312"
 include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "sempl.py"]
 
 [tool.ruff.lint]
-select = ["F", "E", "W", "I", "N", "RUF", "PL", "ANN", "D"]
+select = ["F", "E", "W", "I", "N", "RUF", "PL", "ANN", "D", "SIM", "PTH"]
 ignore = ["D401", "D212", "D205", "D418", "D105", "D415", "D107", "PLR0911", "ANN101", "ANN102"]
 extend-fixable = ["D400"]
 extend-select = ["D400"]
