--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,54 +5,33 @@ on: [push, pull_request]
 jobs:
   linting:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.12]
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python }}
+        python-version: '3.12'
 
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 - --version 1.7.1
         export PATH=~/.local/bin:$PATH
         poetry --version
+    
+    - name: Install Poetry export plugin
+      run: poetry self add poetry-plugin-export
 
     - name: Install dependencies
       run: poetry install --no-root
+    
+    - name: Poetry freeze dependencies to requirement.txt
+      run: poetry export -f requirements.txt --without-hashes --output requirements.txt
 
     - name: Run ruff
       run: poetry run ruff check
-
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.12]
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 - --version 1.7.1
-        export PATH=~/.local/bin:$PATH
-        poetry --version
-
-    - name: Install dependencies
-      run: poetry install --no-root
 
     - name: Run tests
       run: |
