--- a/.github/actions/poetry-freeze/action.yml
+++ b/.github/actions/poetry-freeze/action.yml
@@ -16,6 +16,12 @@ runs:
   steps:
     - run: poetry self add poetry-plugin-export
       shell: bash
+    
+    - run: poetry config warnings.export false
+      shell: bash
 
     - run: poetry export -f requirements.txt ${{ inputs.extra-args }} --output ${{ inputs.output-file }}
+      shell: bash
+
+    - run: cat ${{ inputs.output-file }}
       shell: bash
