--- a/.github/actions/poetry-freeze/action.yml
+++ b/.github/actions/poetry-freeze/action.yml
@@ -34,8 +34,10 @@ runs:
     - run: |
         git config --global user.email "requirements-bot@github.com"
         git config --global user.name "Requirements Bot"
-        git add -f ./${{ inputs.output-file }}.${{ inputs.file-extension }} \
-          ./${{ inputs.output-file }}-${{ inputs.dev-postfix }}.${{ inputs.file-extension }}
-        git commit -m "chore: freeze requirements"
-        git push origin ${{ github.ref_name }}
+        if ! git diff --exit-code; then
+          git add -f ./${{ inputs.output-file }}.${{ inputs.file-extension }} \
+            ./${{ inputs.output-file }}-${{ inputs.dev-postfix }}.${{ inputs.file-extension }}
+          git commit -m "chore: freeze requirements"
+          git push origin ${{ github.ref_name }}
+        fi
       shell: bash
