--- a/.github/actions/poetry-freeze/action.yml
+++ b/.github/actions/poetry-freeze/action.yml
@@ -15,18 +15,14 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: poetry self add poetry-plugin-export
-      shell: bash
-    
-    - run: poetry config warnings.export false
+    - run: |
+        poetry self add poetry-plugin-export
+        poetry config warnings.export false
       shell: bash
 
     - run: |
         poetry export -f requirements.txt --only main \
           --output ${{ inputs.output-file }}.${{ inputs.file-extension }}
-      shell: bash
-    
-    - run: |
         poetry export -f requirements.txt --with dev \
           --output ${{ inputs.output-file }}-${{ inputs.dev-postfix }}.${{ inputs.file-extension }}
       shell: bash
